# file-utils-static

./: CMakeLists.txt  CMakePresets.json  DoxyPress.json  LICENSE.txt  README.md  vcpkg.json
docs/html/: dir_d41d8cd98f00b204e9800998ecf8427e.html  dir_d44c64559bbebec7f509842c48db8b23.html  doxypress.css  file__file-utils-static_8hpp_source.html  index.html  md_README.html  namespacefile__utils.html  namespacemembers.html  namespacemembers_enum.html  namespacemembers_func.html  namespaces.html  navtreedata.js  navtreeindex0.js  pages.html
src/: file-utils-static.cpp  file_utils.cpp
src/include/: file-utils-static.hpp  file_utils.hpp
tests/: CMakeLists.txt  file-utils-static-tests.cpp  file_utils_test.cpp  unix.txt  windows.txt
